--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "framer-motion": "^11.18.0",
     "motion": "^11.18.0",
     "next": "15.1.4",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-tilt": "^1.0.2"
+    "react-tilt": "^1.0.2",
+    "react-vertical-timeline-component": "^3.5.3"
   },
   "devDependencies": {
     "postcss": "^8",
